# The-Reference-Points-Histograms-Shape-Descritpor

./: .readme.md.swp  readme.md
Computed-Descriptors/Original-MNCpp/1_10/: test-INCRARR_1_10_complete.arff  train-INCRARR_1_10_complete.arff
Computed-Descriptors/Original-MNCpp/1_100/: test-INCRARR_1_100_complete.arff  train-INCRARR_1_100_complete.arff
Computed-Descriptors/Original-MNCpp/1_30/: test-INCRARR_1_30_complete.arff  train-INCRARR_1_30_complete.arff
Computed-Descriptors/Original-MNCpp/1_50/: test-INCRARR_1_50_complete.arff  train-INCRARR_1_50_complete.arff
Computed-Descriptors/Original-MNCpp/1_70/: test-INCRARR_1_70_complete.arff  train-INCRARR_1_70_complete.arff
Computed-Descriptors/Original-MNCpp/27_10/: test-INCRARR_27_10_complete.arff  train-INCRARR_27_10_complete.arff
Computed-Descriptors/Original-MNCpp/27_100/: test-INCRARR_27_100_complete.arff  train-INCRARR_27_100_complete.arff
Computed-Descriptors/Original-MNCpp/27_30/: test-INCRARR_27_30_complete.arff  train-INCRARR_27_30_complete.arff
Computed-Descriptors/Original-MNCpp/27_50/: test-INCRARR_27_50_complete.arff  (+1 more)
RPHSD-Library/: .gitignore  CMakeLists.txt  readme.md
RPHSD-Library/demo/: experimental.cpp  individual.cpp
RPHSD-Library/include/: core.hpp  features.hpp  reference_points.hpp  rphsd.hpp  sort.hpp
Run-Dataset-Experiments/Classification/: mn_descriptors.py  uw_descriptors.py
Run-Dataset-Experiments/MN-DS/: CMakeLists.txt  README.md
Run-Dataset-Experiments/UW-DS/: README.md
VisTool/modules/: gui.py  reference_points.py  rphsd.py
VizTool/src/: main.py
(+89 files in other folders)
